测试C系统与集成服务器端的接口